--- a/testFolder/index.html
+++ b/testFolder/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Saus</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Moin</h1>
+    <button id="button">Red</button>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic cupiditate nesciunt non perferendis odit aliquid cumque ducimus quos quam, obcaecati est, dignissimos harum reiciendis voluptatem asperiores optio quis ipsa suscipit! Quisquam cumque, ratione qui nihil, in et veniam dolores culpa sunt nisi eveniet voluptatem. Hic, ex? Fuga molestias expedita nostrum.</p>
+    <script src="script.js"></script>
 </body>
 </html>
